--- a/index.html
+++ b/index.html
@@ -1,13 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PH first project</title>
+    <title>First Project</title>
+    <link rel="shortcut icon" href="img/mypic.jpg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <img src="img/mypic.jpg" alt="" srcset="">
+    <section class="top">
+        <div class="half-width">
+            <h1>
+                Welcome To
+            </h1>
+            <h1>
+                <span class="orange">
+                    BIPLOB
+                </span> Ecosystem
+            </h1>
+            <h4>
+                Build Climber and Train Stopper
+            </h4>
+            <p>
+                You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development Hero.
+            </p>
+            <a href="http://">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="img/my-bg.png" alt="" srcset="">
+        </div>
+    </section>
+    <section class="middle">
+        <div class="half-width">
+            <img src="/img/my-bg.png" alt="" srcset="">
+        </div>
+        <div class="half-width">
+            <h1>
+                Dream Big
+            </h1>
+            <h2>
+                Become a web developer
+            </h2>
+            <h4>
+                I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                how to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </h4>
+            <a href="http://">
+                DOWNLOAD RESUME
+            </a>
+        </div>
+    </section>
+    <section class="bottom">
+        <h1>
+            Experiences
+        </h1>
+        <div class="half-width">
+            <h1>
+                Full Stack Web Developer
+            </h1>
+            <h2>
+                2021-Present | Pro Level Developer
+            </h2>
+            <h4>
+                I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
+                JS. I even know the deployment, server and security. I will give you 100% web solution.
+            </h4>
+        </div>
+        <div class="half-width">
+            <h1>
+                Baby Web Developer
+            </h1>
+            <h2>
+                2020-2021 | Programming Hero Learner
+            </h2>
+            <h4>
+                They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
+                it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+            </h4>
+        </div>
+    </section>
 </body>
+
 </html>
