your commit message here

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section class="top">
+    <section class="welcome">
         <div class="half-width">
             <h1>
                 Welcome To
@@ -38,9 +38,9 @@
             <img src="img/my-bg.png" alt="" srcset="">
         </div>
     </section>
-    <section class="middle">
+    <section class="dream">
         <div class="half-width">
-            <img src="/img/my-bg.png" alt="" srcset="">
+            <img src="img/my-bg.png" alt="" srcset="">
         </div>
         <div class="half-width">
             <h1>
@@ -58,7 +58,7 @@
             </a>
         </div>
     </section>
-    <section class="bottom">
+    <section class="exp">
         <h1>
             Experiences
         </h1>
