--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h1>
             Experiences
         </h1>
-        <div class="half-width">
+        <div class="half-width" id="full">
             <h1>
                 Full Stack Web Developer
             </h1>
@@ -75,7 +75,7 @@
                 JS. I even know the deployment, server and security. I will give you 100% web solution.
             </h4>
         </div>
-        <div class="half-width">
+        <div class="half-width" id="baby">
             <h1>
                 Baby Web Developer
             </h1>
@@ -91,3 +91,11 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
+
