--- a/index.html
+++ b/index.html
@@ -88,14 +88,11 @@
             </h4>
         </div>
     </section>
+    <footer>
+        <p>
+            © Peter Parker 2023, a Programming Hero initiative.
+        </p>
+    </footer>
 </body>
 
 </html>
-
-
-
-
-
-
-
-
